--- a/Wikidata-Toolkit/wdtk-examples/pom.xml
+++ b/Wikidata-Toolkit/wdtk-examples/pom.xml
@@ -80,6 +80,11 @@
 			<artifactId>commons-compress</artifactId>
 			<version>${apacheCommonsCompressVersion}</version>
 		</dependency>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>6.0.6</version>
+		</dependency>
 	</dependencies>
 
 	<build>
